tests/fixtures/invalid/none_add_dict.py
# Cannot add None and Dict[str, int]
x: None = None + {"a": 1}
